...
    <string name="syptoms">Symptoms</string>
    <string name="condition_duration">How long have you had this condition?</string>
    <string name="successful_checkin">You have Checked-In successfully!</string>
    <string name="end_session">End Session</string>
    <string name="setting_lbl1">Clear All Data</string>
    <string name="setting_lbl2">New Verification Code</string>
    <string name="setting_lbl3">Logout</string>
    <string name="share_data_now">Share Data Now</string>
    <string name="share_data_automatically">Share Data Automatically</string>
    <string name="attachments">Attachments</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="patient_recommendation">Patient Recommendation</string>
    <string name="session_id">Session ID</string>
...
