...
                            android:padding="12dp"
                            android:paddingStart="12dp" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/subscribeButton"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
...
